IW-133, Fix background color for contact us form on mobile.

--- a/src/pages/Landing/sections/Clients/index.styl
+++ b/src/pages/Landing/sections/Clients/index.styl
@@ -1,5 +1,3 @@
-@import '~styles/config.styl'
-
 .clients
   position relative
 
@@ -88,19 +86,15 @@
       display flex
       flex-direction column
       align-items center
+      justify-content space-around
       height 100vh
-      padding 120px 0
+      padding 60px 0
       transition transform .2s ease
-
-      .section-heading
-        margin-bottom 120px
 
     +iphone()
       height 100%
 
     .client-footer
-      flex 1
-
       +iphone()
         margin-top 24px
 
